# future-tstrings

./: LICENSE  README.md  example.py  experiments.py  future_fstrings.py  pyproject.toml
.github/workflows/: test-python-package.yml
src/future_tstrings/: __init__.py  _autoinstall.py  encoding.py  importer.py  installer.py  main.py  make_tstring.py  parser.py  templatelib.py  utils.py
src/future_tstrings/parser/: __init__.py  parse_grammar.py
src/future_tstrings/parser/compiler/: ast.py  ast_apply_offset.py  compile.py
src/future_tstrings/parser/tokenizer/: _tokens_re.py  _tokens_util.py  tokenize.py
tests/: _fstrings.py  _fstrings_multiline.py  test_from_pep.py  test_from_pep_312.py  test_fstrings.py
