[project]
name = "future-tstrings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marckie Zeender", email = "mkzeender@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "tokenize-rt>=6.1.0",
]

[project.scripts]
future-tstrings = "future_tstrings.main:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.hooks.autorun]
dependencies = ["hatch-autorun"]
template = "import future_tstrings.autoinstall"
code = "..."